### Added
- A new Workspace option allows the use of a custom folder as a temporary folder.
- The Database now supports multiple database IDs (separate them with comma)

### Changed
- The "master" GitHub repository was renamed to "main".
- Freequant and Labelquant can now be executed before the Filter command.

### Fixed
- Small bugs and fixes.
- PSMs lists often contained observations mapping to proteins that did not pass the FDR filter.