@@ -9,3 +9,4 @@
 ### Fixed
 - Small bugs and fixes.
 - PSMs lists often contained observations mapping to proteins that did not pass the FDR filter.
+- Bio quant was failing because of the unassigned database path.
